Fix potential crash removing cursorthemes

m_themeModel->removeTheme(idx) will adjust the model.

Therefore any model indexes we had stored will be invalidated.
If we try and remove 2 cursor themes this can end up either crashing or
even worse potentially removing the wrong theme.

BUG: 439030